; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-omap2/extr_prm2xxx_3xxx.c_omap2_pwrdm_set_logic_retst.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-omap2/extr_prm2xxx_3xxx.c_omap2_pwrdm_set_logic_retst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.powerdomain = type { i32 }

@OMAP_LOGICRETSTATE_MASK = common dso_local global i32 0, align 4
@OMAP2_PM_PWSTCTRL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @omap2_pwrdm_set_logic_retst(%struct.powerdomain* %0, i32 %1) #0 {
  %3 = alloca %struct.powerdomain*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.powerdomain* %0, %struct.powerdomain** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @OMAP_LOGICRETSTATE_MASK, align 4
  %8 = call i32 @__ffs(i32 %7)
  %9 = shl i32 %6, %8
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* @OMAP_LOGICRETSTATE_MASK, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.powerdomain*, %struct.powerdomain** %3, align 8
  %13 = getelementptr inbounds %struct.powerdomain, %struct.powerdomain* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @OMAP2_PM_PWSTCTRL, align 4
  %16 = call i32 @omap2_prm_rmw_mod_reg_bits(i32 %10, i32 %11, i32 %14, i32 %15)
  ret i32 0
}

declare dso_local i32 @__ffs(i32) #1

declare dso_local i32 @omap2_prm_rmw_mod_reg_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
